CU-en64zk: fix whitespace for select cell

--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -39,7 +39,7 @@
 			}
 
 			.cell.c-object, .cell.c-file { padding-right: 0px; }
-			.cellContent.c-object {
+			.cellContent.c-object, .cellContent.c-select {
 				.wrap { white-space: nowrap; }
 			}
 
